# fazle-llm-cost-router

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  render.yaml
.github/: dependabot.yml
app/: cache.py  complexity_scorer.py  config.py  cost_router.py  main.py  schemas.py  tracing.py
app/routers/: llm.py  stats.py
lua/: cache_lock.lua
